# backend-api-jwt-rust

./: .env  Cargo.toml  README.md
migrations/: 20260303074236_create_users_table.sql
src/: main.rs
src/config/: database.rs  mod.rs
src/handlers/: login.handler.rs  mod.rs  register.handler.rs  user.handler.rs
src/middlewares/: auth.middleware.rs  mod.rs
src/models/: mod.rs  user.rs
src/routes/: auth.routes.rs  mod.rs  user.routes.rs
src/schemas/: login.schema.rs  mod.rs  register.schema.rs  user.schema.rs
src/utils/: jwt.rs  mod.rs  response.rs
