[package]
name = "backend-api-jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bcrypt = "0.18.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
validator = { version = "0.20.0", features = ["derive"] }
